# MipsSimul

./: CMakeLists.txt  README.md  assemblerTestMain.cpp  back.txt  ideias  lexerTestMain.cpp  main.cpp  parserMain.cpp  parserTest.cpp  parserTestMain.cpp
assembler/include/: asm.h  asm_ast.h  asm_isa.h  asm_lexer.h  asm_parser.h  asm_registers.h  asm_t_kind.h  asm_token_kind.h  asm_tokens.h  disasm.h
assembler/src/: asm.cpp  asm_isa.cpp  asm_lexer.cpp  asm_parser.cpp  asm_registers.cpp  asm_t_kind.cpp  asm_token_kind.cpp  asm_tokens.cpp  disasm.cpp
benchmark/: test.asm
benchmarks/: test1.asm
benchmarks/asm/: test1.asm  test2.asm  testeAsmHex.asm
benchmarks/asm_old/: test2.asm
benchmarks/miniC/: partial.c  test.c
benchmarks/miniC_old/: test.c
common/include/: common.h  definitions.h  lexer.h  parser.h  token.h
common/src/: common.cpp  lexer.cpp  parser.cpp
cpu/: cpu.md
doc/: grammar.md  isa.md
docs/: assembler.md  codegen.md  datapath.md  isa.md  pipeline.md  runtime.md  spec.md
ideas/: mips_canvas.py
include/: assembler.h  ast.h  common.h  definitions.h  disassembler.h  isa.h  lexer.h  parser.h  registers.h  tokens.h
minic/include/: minic_ast.h  minic_lexer.h  minic_parser.h  minic_semantic.h  minic_t_kind.h  minic_tokens.h
minic/src/: minic_lexer.cpp  minic_parser.cpp  minic_semantic.cpp  minic_t_kind.cpp
src/: assembler.cpp  common.cpp  disassembler.cpp  isa.cpp  lexer.cpp  main_asm.cpp  parser.cpp  parser.h  registers.cpp  tokens.cpp  tools_cli.cpp  util.cpp
src/main/: mips_tools.cpp
src/tests/: assemblerTestMain.cpp  disassemblerTestMain.cpp  lexerTestMain.cpp  parserTestMain.cpp
tools/include/: assembler_cli.h
tools/src/: assembler_cli.cpp  assembler_tools.cpp
tools/tests/: asmLexerTestMain.cpp  asmParserTestMain.cpp  asmTestMain.cpp  assemblerTestMain.cpp  disasmTestMain.cpp  disassemblerTestMain.cpp  lexerTestMain.cpp  miniCLexerTestMain.cpp  minicLexerTestMain.cpp  minicParserTestMain.cpp  parserTestMain.cpp
